--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,8 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
-     implementation("net.dv8tion:JDA:$jdaVersion")
+    implementation 'io.github.cdimascio:dotenv-java:2.3.2'
+    implementation("net.dv8tion:JDA:$jdaVersion")
 }
 
 application {
