--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ sourceCompatibility = targetCompatibility = 1.8
 mainClassName = 'goobot.App'
 
 version '1.0'
-def jdaVersion = '4.4.0_352'
+def jdaVersion = '5.0.0-beta.2'
 
 repositories {
     // Use Maven Central for resolving dependencies.
