--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'io.github.cdimascio:dotenv-java:2.3.2'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'commons-io:commons-io:2.6'
     implementation("net.dv8tion:JDA:$jdaVersion")
 }
 
