--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
-    id'com.github.johnrengelman.shadow' version '5.2.0'
+    id'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'java'
 }
 
 sourceCompatibility = targetCompatibility = 1.8
