--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,7 @@
 BOT_PREFIX=!
 LOG_MESSAGES=true
 USE_CUSTOM_SCROLL_PRICES=true
+USE_CUSTOM_SCROLL_CASTING=true
 DICE_NOT_PARSED_MSG=Could not parse provided dice. Please try in format:\n`!roll <number of dice>d<dice>`
 SPELL_NOT_FOUND_MSG=Spell not found. Keep in mind, only PHB, XGtE, and TCoE spells are supported currently.
 PAT_MSG=<:ceresblush:875653225385168898>
