--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
 }
 
 sourceCompatibility = targetCompatibility = 1.8
-mainClassName = 'goobot.App'
+mainClassName = 'goobot.CeresBot'
 
 version '1.0'
 def jdaVersion = '5.0.0-beta.2'
@@ -41,7 +41,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'goobot.App'
+    mainClass = 'goobot.CeresBot'
 }
 
 compileJava.options.encoding = 'UTF-8'
