--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'io.github.cdimascio:dotenv-java:2.3.2'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'commons-io:commons-io:2.6'
+    implementation 'com.opencsv:opencsv:5.7.1'
     implementation("net.dv8tion:JDA:$jdaVersion")
 }
 
