added full feature to parse character CSV file into objects

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /build/
 /bin/
 src/main/resources/spells.json
+src/main/resources/materia_characters.csv
+src/main/resources/inferno_characters.csv
 
 # Ignore Gradle GUI config
 gradle-app.setting
